src/objects/PSA_Cap__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <formula>Project__r.pse__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Amount__c</fullName>
        <label>Cap Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Level__c</fullName>
        <label>Cap Level</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cap_Type__c</fullName>
        <label>Cap Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <formula>Project__r.PSA_Customer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meals - Self - Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM - Meals Self</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>PSA Caps</relationshipLabel>
        <relationshipName>PSA_Caps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PSA Cap</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cap_Amount__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CAP-{00000}</displayFormat>
        <label>PSA Cap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Caps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>